--- a/index.html
+++ b/index.html
@@ -3,56 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <title>Frontend HTML and CSS</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<nav>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#reports">Weekly Reports</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
 <body>
-    <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>Showcasing my skills, projects, and weekly progress.</p>
-    </header>
-    <section id="projects">
-        <h2>Projects</h2>
-        <p>Project gallery will be here.</p>
-    </section>
-    <section id="reports">
-        <h2>Weekly Progress Reports</h2>
-        <form>
-            <label for="date">Date:</label>
-            <input type="date" id="date" name="date">
-            <label for="time">Time Spent:</label>
-            <input type="number" id="time" name="time" placeholder="Hours">
-            <label for="tasks">Tasks Completed:</label>
-            <textarea id="tasks" name="tasks"></textarea>
-            <button type="submit">Submit</button>
-        </form>
-        <div id="report-display">
-            <!-- Weekly reports will be displayed here -->
+    <header class="header">
+        <div class="container">
+            <h1>Welcome to My Frontend Project</h1>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email">
-            <label for="message">Message:</label>
-            <textarea id="message" name="message"></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </section>
-    <footer>
-        <p>&copy; 2025 Joel Ndiba Mwaura</p>
+    </header>
+
+    <main class="main-content">
+        <section id="home" class="section">
+            <h2>Home Section</h2>
+            <p>Welcome to the homepage of this awesome project. Explore more to learn about it!</p>
+        </section>
+
+        <section id="about" class="section">
+            <h2>About Us</h2>
+            <p>This project demonstrates basic frontend design using HTML and CSS.</p>
+        </section>
+
+        <section id="services" class="section">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Web Design</li>
+                <li>Development</li>
+                <li>SEO Optimization</li>
+            </ul>
+        </section>
+
+        <section id="contact" class="section">
+            <h2>Contact Us</h2>
+            <p>Email: example@example.com</p>
+            <p>Phone: +123 456 7890</p>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>&copy; 2025 Your Name. All rights reserved.</p>
     </footer>
-    <script src="assets/scripts/app.js"></script>
 </body>
 </html>
