--- a/index.html
+++ b/index.html
@@ -3,53 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend HTML and CSS</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <h1>Welcome to My Frontend Project</h1>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+    <!-- Navigation -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#reports">Weekly Reports</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main class="main-content">
-        <section id="home" class="section">
-            <h2>Home Section</h2>
-            <p>Welcome to the homepage of this awesome project. Explore more to learn about it!</p>
-        </section>
+    <!-- Home Section -->
+    <section id="home">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Showcasing my skills, projects, and weekly progress.</p>
+    </section>
 
-        <section id="about" class="section">
-            <h2>About Us</h2>
-            <p>This project demonstrates basic frontend design using HTML and CSS.</p>
-        </section>
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project-gallery">
+            <!-- Example Project -->
+            <div class="project-card">
+                <img src="assets/images/project1.jpg" alt="Project 1">
+                <h3>Project Title</h3>
+                <p>Brief description of the project goes here.</p>
+            </div>
+        </div>
+    </section>
 
-        <section id="services" class="section">
-            <h2>Our Services</h2>
-            <ul>
-                <li>Web Design</li>
-                <li>Development</li>
-                <li>SEO Optimization</li>
-            </ul>
-        </section>
+    <!-- Weekly Reports Section -->
+    <section id="reports">
+        <h2>Weekly Progress Reports</h2>
+        <form id="progress-form">
+            <label for="date">Date:</label>
+            <input type="date" id="date" name="date" required>
 
-        <section id="contact" class="section">
-            <h2>Contact Us</h2>
-            <p>Email: example@example.com</p>
-            <p>Phone: +123 456 7890</p>
-        </section>
-    </main>
+            <label for="time-spent">Time Spent (hours):</label>
+            <input type="number" id="time-spent" name="time-spent" required>
 
-    <footer class="footer">
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
-    </footer>
+            <label for="tasks-completed">Tasks Completed:</label>
+            <textarea id="tasks-completed" name="tasks-completed" rows="4" required></textarea>
+
+            <button type="submit">Add Report</button>
+        </form>
+        <div id="report-list">
+            <h3>Reports</h3>
+            <!-- Reports will be dynamically added here -->
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <form id="contact-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <button type="submit">Send</button>
+        </form>
+    </section>
+
+    <script src="assets/scripts/app.js"></script>
 </body>
 </html>
