--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
       <li>Build a strong online presence that demonstrates my capabilities and passion for development.</li>
     </ul>
   </section>
+  <!-- Contact Section -->
+<section id="contact">
+    <h2>Contact Me</h2>
+    <form action="/submit-form" method="POST">
+      <label for="name">Your Name</label>
+      <input type="text" id="name" name="name" required>
+  
+      <label for="email">Your Email</label>
+      <input type="email" id="email" name="email" required>
+  
+      <label for="message">Your Message</label>
+      <textarea id="message" name="message" required></textarea>
+  
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+  
 
   <!-- Footer with Contact Link -->
   <footer>
