--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
       <li>Build a strong online presence that demonstrates my capabilities and passion for development.</li>
     </ul>
   </section>
+  <!-- Projects -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-card">
+      <h3>Project Title</h3>
+      <p>Description of the project...</p>
+      <a href="project-link" class="btn">View Project</a>
+    </div>
+  </section>
   <!-- Weekly Progress Section -->
   <section id="progress">
     <h2>Weekly Progress</h2>
