--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Joel Ndiba Mwaura | Web Developer Portfolio</title>
   <link rel="stylesheet" href="assets/styles/style.css">
   <link rel="stylesheet" href="assets/styles/normalize.css">
-  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Header Section -->
@@ -97,5 +96,6 @@
       </form>
     </section>  
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
