--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
       </ul>
     </nav>
   </header>
+  <style>
+    #my-section {
+      background-image: url('assets/images/wireframe.webp');
+      background-size: cover; /* Ensures the image covers the entire section */
+      background-position: center; /* Centers the background image */
+      height: 500px; /* Set the height of the section */
+    }
+  </style>
+  <img src="assets/images/wireframe.webp" alt="Wireframe">
+
+  <div id="my-section">
+    <!-- Content goes here -->
+  </div>
+  
   <!-- Home Section (Introduction) -->
   <section id="home">
     <h1>Welcome to My Portfolio</h1>
