--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Joel Ndiba Mwaura | Web Developer Portfolio</title>
-  <link rel="stylesheet" href="assets/styles/style.css">
+  <link rel="stylesheet" href="assets/styles.css">
   <link rel="stylesheet" href="assets/styles/normalize.css">
 </head>
 <body>
