--- a/wireframe.html
+++ b/wireframe.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wire Frame</title>
+  <!-- Link to the wireframe.css stylesheet -->
+  <link rel="stylesheet" href="path/to/assets/wireframe.css">
+  <!-- Example of linking a custom JavaScript file -->
+  <script src="path/to/assets/script.js"></script>
 </head>
 <header>
     <h1>Website Wireframe</h1>
