--- a/wireframe.html
+++ b/wireframe.html
@@ -18,8 +18,7 @@
       <main>
         <section>
           <h2>Section 1</h2>
-          <img src="assets/images/wireframe.webp" alt="Wireframe" style="width: 100%; max-width: 400px;">
-          <p>Content for the first section goes here.</p>
+          <img src="assets/images/wireframe.webp" alt="Wireframe" style="width: 100%; max-width: 400px;">          <p>Content for the first section goes here.</p>
         </section>
       
         <section>
