--- a/wireframe.html
+++ b/wireframe.html
@@ -12,13 +12,14 @@
 <header>
     <h1>Website Wireframe</h1>
     <p>Your website's basic structure</p>
-    <img src="assets/images/wireframe.webp" alt="Wireframe Image" style="width: 100%; max-width: 400px; margin-top: 20px;">
+    <img src="assets/images/wireframe.webp" alt="Wireframe Image">
 </header> 
 <body>
       <main>
         <section>
           <h2>Section 1</h2>
-          <img src="assets/images/wireframe.webp" alt="Wireframe" style="width: 100%; max-width: 400px;">          <p>Content for the first section goes here.</p>
+          <img src="assets/images/wireframe.webp" alt="Wireframe">          
+          <p>Content for the first section goes here.</p>
         </section>
       
         <section>
