--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <li>Backend Development</li>
       <li>Database Management</li>
       <li>Version Control (Git)</li>
+      <li>Node.js</li>
     </ul>
   </section>
   <!-- Goals for the Portfolio Section -->
