--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <img class="profile-picture" src="IMAGES/temple.jpg" alt="Profile Pictute">
   </header>
   <div id="my-section">
     <!-- Content goes here -->
