--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
   </header>
   <div id="my-section">
     <!-- Content goes here -->
+    <nav>
+      <ul id="primaryNav">
+        <li><a href="https://xjomwnd.github.io/REL275-Sharing/index.html">Home</a></li>
+        <li><a href="https://xjomwnd.github.io/REL275-Sharing/Next/next.html" class="active">Page 2</a></li>
+      </ul>
+  </nav>
   </div>
 
   <!-- Home Section (Introduction) -->
