--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- Content goes here -->
     <nav>
       <ul id="primaryNav">
-        <li><a href="https://xjomwnd.github.io/REL275-Sharing/index.html">Home</a></li>
-        <li><a href="https://xjomwnd.github.io/REL275-Sharing/Next/next.html" class="active">Page 2</a></li>
+        <li><a href="https://xjomwnd2.github.io/GS497_Project/index.html">Home</a></li>
+        <li><a href="https://xjomwnd2.github.io/GS497_Project/REL275-Sharing/Next/next.html" class="active">Page 2</a></li>
       </ul>
   </nav>
   </div>
