--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="project-card">
       <h3>Project Title</h3>
       <p>Description of the project...</p>
-      <a href="project-link" class="btn">View Project</a>
+      <a href="https://xjomwnd2.github.io/GS497_Project/project.html" class="btn">View Project</a>
     </div>
   </section>
   <!-- Weekly Progress Section -->
