--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <img class="profile-picture" src="assets/images/photo.avif" alt="Profile Pictute">
+    <img class="profile-picture" src="assets/images/photo.avif" src="assets/images/photo.avif" src="assets/images/photo.avif"alt="Profile Pictute">
   </header>
   <div id="my-section">
     <!-- Content goes here -->
