--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <img class="profile-picture" src="assets/images/photo.avif" src="assets/images/photo.avif" src="assets/images/photo.avif"alt="Profile Pictute">
+    <img class="profile-picture"  src="assets/images/photo.avif"alt="Profile Pictute">
   </header>
   <div id="my-section">
     <!-- Content goes here -->
@@ -47,6 +47,7 @@
     </ul>
   </section>
   <!-- Goals for the Portfolio Section -->
+  <img class="profile-picture"  src="assets/images/photo.avif"alt="profile-picture">
   <section id="goals">
     <h2>My Goals for This Portfolio</h2>
     <p>This portfolio is a reflection of my growth and skills as a web developer. Through this platform, I want to:</p>
