--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   </section>
   <!-- Weekly Progress Section -->
   <section id="progress">
+    <img class="profile-picture"  src="assets/images/photo3.avif"alt="profile-picture">
     <h2>Weekly Progress</h2>
     <p>Track my weekly progress as I continue to grow and refine my skills.</p>
     <!-- Progress Report Form -->
@@ -86,6 +87,7 @@
   </section>
   <!-- Footer with Contact Link -->
   <footer>
+    <img class="profile-picture"  src="assets/images/photo2.avif"alt="profile-picture">
     <section id="contact">
       <h2>Contact Me</h2>
       <form action="/submit-form" method="POST">
