--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </ul>
   </section>
   <!-- Goals for the Portfolio Section -->
-  <img class="profile-picture"  src="assets/images/photo1.avif"alt="profile-picture">
+  <img class="profile-picture"  src="assets/images/IMG_20210717_135211.jpg"alt="profile-picture">
   <section id="goals">
     <h2>My Goals for This Portfolio</h2>
     <p>This portfolio is a reflection of my growth and skills as a web developer. Through this platform, I want to:</p>
