--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <img class="profile-picture"  src="assets/images/download.jpeg"alt="Profile Pictute">
+    <img class="profile-picture"  src="assets/images/download.jpeg"alt="profile-picture">
   </header>
   <div id="my-section">
     <!-- Content goes here -->
